--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b  ",
+    "build": "tsc -b",
     "start": " node dist/index.js",
     "dev": "pnpm run build && pnpm run start"
   },
@@ -14,14 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@repo/common": "workspace:*",
     "@repo/common-backend": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/common":"workspace:*",
     "@types/jsonwebtoken": "^9.0.9"
   }
 }
