--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@tabler/icons-react": "^3.31.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -50,6 +51,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.7.4",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
